# chat-with-your-data

./: .gitignore  AI_project_3_week_plan.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  evals.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/backend/: answer_generator.py  config.py  db.py  eval_runner.py  judge.py  main.py  metrics.py  pipeline.py  pricing.py  query_executor.py  schema.py  sql_generator.py  sql_validator.py
backend/tests/: test_evals_schema.py  test_pipeline.py  test_request_logging.py  test_sql_validator.py
database/: seed.sql
database/init/: zz-read-only-sql-user.sql
evals/: questions.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
